# ion-drift

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  COLOR_SCHEME.md  CONTRIBUTORS.md  Cargo.toml  Dockerfile  FEATURES.md  KNOWN_ISSUES.md  LICENSE  README.md  REVIEW.md  ROADMAP.md  SECURITY.md  TOPOLOGY.md  USE-AGREEMENT  docker-compose.build.yml  docker-compose.example.yml  docker-compose.yml  ion-drift-anomalies-20260310.csv  ion-drift-anomalies-20260313.csv
.codeforge/: junior_output.md  task.json
.codeforge/history/: 62a84a797406.md
.github/workflows/: release.yml
SpecDocs/: behavior_engine_assessment.md  ion_drift_alerting_engine_phased_v2.md  ion_drift_link_saturation_feature_spec_phased.md  ion_drift_sankey_feature_spec_phased.md  item_11_config_centralization.md  item_13_adapter_pattern.md  item_15_session_hardening.md  item_17_authz_tests.md  item_18_csrf_tests.md  item_19_migration_tests.md  item_20_task_reliability_tests.md  item_21_portability_tests.md  problem_fix_plan.md
SpecDocuments/: RESPONSE_N_PLAN.md  ion-drift-feature-specs.docx  ndr_attachment_algorithm.md  topology_inference_engine.md  topology_inference_plan_answers.md  topology_inference_pseudocode.md
config/: cli.example.toml  production.example.toml  production.toml  server.example.toml
crates/ion-drift-cli/: Cargo.toml
crates/ion-drift-cli/src/: config.rs  main.rs
crates/ion-drift-cli/src/commands/: firewall.rs  interfaces.rs  ip.rs  logs.rs  mod.rs  speedtest.rs  system.rs  traffic.rs
crates/ion-drift-module-api/: Cargo.toml
crates/ion-drift-module-api/src/: capabilities.rs  context.rs  error.rs  event.rs  lib.rs  module.rs  registration.rs  state_reads.rs  storage.rs  testing.rs  wire.rs
crates/ion-drift-module-host/: Cargo.toml
crates/ion-drift-module-host/src/: event_bus.rs  lib.rs  panic_guard.rs  registry.rs  storage_backend.rs
crates/ion-drift-storage/: Cargo.toml
crates/ion-drift-storage/src/: alerting.rs  behavior.rs  lib.rs  metrics.rs  read_traits.rs  switch.rs
crates/ion-drift-storage/tests/: migration_test.rs
crates/ion-drift-web/: Cargo.toml
crates/ion-drift-web/src/: alerting.rs  anomaly_correlator.rs  attack_techniques.rs  auth.rs  behavior_engine.rs  bootstrap.rs  certwarden.rs  config.rs  connection_store.rs  connection_store_schema.sql  correlation_engine.rs  device_manager.rs  device_queue_registry.rs  device_resolution.rs  dns.rs  geo.rs  identity_utils.rs  infrastructure_snapshot.rs  investigation.rs  lib.rs  license.rs  live_traffic.rs  log_parser.rs  main.rs  middleware.rs  module_adapters.rs  modules.rs  oui.rs  passive_discovery.rs  poller_registry.rs  provision.rs  router_queue.rs  scanner.rs  secrets.rs  setup.rs  snapshots.rs  snmp_poller.rs  state.rs  stats_store.rs  switch_poller.rs  (+4 more)
crates/ion-drift-web/src/demo/: mod.rs  sanitizer.rs
crates/ion-drift-web/src/modules_registry/: dispatcher.rs  mod.rs  service.rs  store.rs
crates/ion-drift-web/src/routes/: admin_modules.rs  alerts.rs  arp.rs  backbone.rs  behavior.rs  connections.rs  devices.rs  firewall.rs  history.rs  identity.rs  inference.rs  interfaces.rs  ip.rs  license.rs  logs.rs  metrics.rs  mod.rs  module_proxy.rs  neighbor_aliases.rs  network_map_status.rs  policy.rs  policy_deviations.rs  provision.rs  sankey.rs  settings.rs  speedtest.rs  stats.rs  switch_data.rs  system.rs  topology.rs  traffic.rs  vlan_activity.rs  vlan_flows.rs  vlans.rs
crates/ion-drift-web/src/tasks/: behavior.rs  cert.rs  connections.rs  metrics.rs  mod.rs  policy_deviation_detector.rs  policy_sync.rs  port_baselines.rs  traffic.rs
crates/ion-drift-web/src/topology_inference/: candidates.rs  graph.rs  mod.rs  resolver.rs  scoring.rs  state.rs
crates/ion-drift-web/tests/: authz_test.rs  config_docs_test.rs  config_test.rs  csrf_test.rs  migration_test.rs  task_supervisor_test.rs
crates/ion-drift-web/tests/common/: mod.rs
crates/mikrotik-core/: Cargo.toml
crates/mikrotik-core/examples/: smoke_test.rs  speedtest_test.rs  tracker_test.rs
crates/mikrotik-core/src/: behavior.rs  client.rs  error.rs  lib.rs  metrics.rs  serde_helpers.rs  snmp_client.rs  snmp_profile.rs  speedtest.rs  switch_store.rs  swos_client.rs  tracker.rs  vlan_flows.rs
crates/mikrotik-core/src/resources/: bridge.rs  connection.rs  ethernet.rs  firewall.rs  interface.rs  ip.rs  log.rs  logging.rs  mod.rs  neighbor.rs  system.rs
crates/mikrotik-core/src/speedtest/: akamai.rs  cloudflare.rs  mod.rs  netflix.rs
crates/mikrotik-core/tests/: config_test.rs  migration_test.rs
data/: attack_techniques.json
diagnostics/inference-snapshot-2026-03-06/: backbone_links.csv  mac_attachment_state.csv  mac_observations.csv  neighbor_discovery.csv  network_identities.csv  port_role_probabilities.csv  switch_mac_table.csv  switch_port_roles.csv
docker/: entrypoint.sh  root_ca.crt
docs/: TOPOLOGY.md  auth.md  behavior-engine-v2-plan.md  behavior-engine-v3-plan.md  behavior-engine-whitepaper.md  behavior-engine.md  configuration.md  connection-store-whitepaper.md  correlation-engine-whitepaper.md  deviation-limitations.md  drill-down-plan.md  investigation-engine-whitepaper.md  module-developer-guide.md  policy-editor.md  review-devtools-brief.md  router-setup.md  snmp-profiles.md  topology-engine-whitepaper.md  troubleshooting.md
docs/security/: SECURITY-REVIEW-2026-03-23.md
scripts/: snmp-profile-collect.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: app.css  main.tsx
web/src/api/: client.ts  queries.ts  types.ts
web/src/components/: badge.tsx  card-error-boundary.tsx  data-table.tsx  device-link.tsx  error-boundary.tsx  error-display.tsx  help-content.tsx  license-banner.tsx  loading-spinner.tsx  router-port-grid.tsx  stat-card.tsx  subnet-utilization.tsx
web/src/constants/: vlans.ts
web/src/hooks/: use-auth.ts  use-page-tracking.ts  use-vlan-lookup.ts
web/src/lib/: country.ts  format.ts  services.ts  utilization.ts  utils.ts
web/src/routes/: __root.tsx  behavior.tsx  connections.tsx  firewall.tsx  history.tsx  index.tsx  interfaces.tsx  ip.tsx  login.tsx  logs.tsx  (+4 more)
(+73 files in other folders)
