[workspace]
resolver = "2"
members = [
    "crates/mikrotik-core",
    "crates/ion-drift-storage",
    "crates/ion-drift-module-api",
    "crates/ion-drift-module-host",
    "crates/ion-drift-cli",
    "crates/ion-drift-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "PolyForm-Shield-1.0.0"
