[package]
name = "ion-drift-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for Mikrotik RouterOS management"

[[bin]]
name = "ion-drift"
path = "src/main.rs"

[dependencies]
mikrotik-core = { path = "../mikrotik-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
