[package]
name = "ion-drift-module-api"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Stable API contract for Ion Drift modules"

[dependencies]
tokio = { version = "1", features = ["sync", "time"] }
axum = "0.8"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = []
# Optional test harness (MockContext, MockEventBus, etc.) for module unit tests.
testing = []
