[package]
name = "ion-drift-module-host"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Runtime host for Ion Drift modules (registry, event bus, lifecycle)"

[dependencies]
ion-drift-module-api = { path = "../ion-drift-module-api" }
tokio = { version = "1", features = ["sync", "rt", "fs", "time", "macros"] }
axum = "0.8"
tower = "0.5"
tracing = "0.1"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1"
