[package]
name = "ion-drift-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLite data stores for ion-drift"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
