[package]
name = "ion-drift-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web server for Mikrotik RouterOS management dashboard"

[[bin]]
name = "ion-drift-web"
path = "src/main.rs"

[dependencies]
mikrotik-core = { path = "../mikrotik-core" }
ion-drift-storage = { path = "../ion-drift-storage" }
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
http-body-util = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots", "rustls-tls-webpki-roots"] }
openidconnect = { version = "=4.0.1", default-features = false, features = ["reqwest", "rustls-tls"] }
jsonwebtoken = "=10.3.0"
rand = "0.9"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cookie = "0.18"
dashmap = "6"
dirs = "6"
anyhow = "1"
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "=0.10.9"
aes-gcm = "=0.10.3"
argon2 = "0.5"
secrecy = { version = "0.10", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["std"] }
hmac = "=0.12.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder", "tokio1"] }
x509-parser = "0.16"
maxminddb = "0.24"
flate2 = "1"
tar = "0.4"
quick-xml = "0.37"
hickory-resolver = "0.25"
openssl = "0.10"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
