[package]
name = "mikrotik-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RouterOS v7 REST API client library"

[dependencies]
digest_auth = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots", "rustls-tls-webpki-roots"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
